# mutable

./: README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
mutable/: __init__.py  core.py
tests/: test_basic.py
